--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- My minified  CSS version link -->
-    <link rel="stylesheet" href="assets/css/simplified.css">
+     <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/gh/WabweniBrian/css-utility-classes/assets/css/simplified.min.css"> -->
     <!-- Custom CSS link -->
     <link rel="stylesheet" href="assets/css/styles.css">
     <!-- Font Awesome link -->
